# liquid

./: .gitignore  LE.py  citizen.py  common_run_eval.ipynb  council.py  delegating_citizen.py  dictator_council.py  eq.txt  experiment.sh  experiment_eval.ipynb  experiments.py  explore.ipynb  graph_methodology.py  grid.sh  grid_fse.sh  grid_parallel.sh  grid_series.sh  image_citizen.py  liquid_council.py  liquid_ensemble.py  main.py  main_analysis.ipynb  main_exp.csv  majority_council.py  mnist.py  model.onnx  name_to_citizen.py  nmi_optimize_4h.csv  optimize_nmi_analysis.ipynb  pyproject.toml  readme.md  run_vae_train.sh  setup.py  synth_eval.ipynb  synth_metrics.py  synthetic.py  synthetic_citizen.py  tasks.md  test_particle.ipynb  train.py  (+2 more)
liquid/: adapter.py  cifar10.json  cifar10_hyper.json  experiment.sh  globals.py  hyper.py  hyper_cifar.py  hyper_le.sh  hyper_lgbm.sh  hyper_moe.sh  hyper_protein.py  hyper_rf.sh  multi_hyper_le.sh  multi_hyper_lgbm.sh  multi_hyper_moe.sh  multi_hyper_rf.sh  nn_adapter.py  optimize.py  protein.json  protein_best.json  protein_best_conf.json  protein_best_rmse.json  scaling_laws.py  synth_metrics.py  synthetic.py  test_best.py  test_size.py  train.py  utils.py  visualizer.py
liquid_jax/: architectures.py  atomic_networks.py  bikes.py  capacity.ipynb  capacity.py  check.ipynb  cifar10.py  dd_interactive.ipynb  energy.py  evaluation.py  exp_composition.py  experiment.py  grid.py  grid.sh  grid_eval.ipynb  hyper.ipynb  hyper.py  learner_base.py  learner_de.py  learner_le.py  learner_le_non_orthogonal.py  learner_le_orthogonal.py  math_utils.py  (+24 more)
(+99 files in other folders)
