[project]
name = "liquid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.3",
    "ipykernel>=7.2.0",
    "jax[cuda12]>=0.9.1",
    "matplotlib>=3.10.8",
    "optax>=0.2.7",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "tensorflow-datasets>=4.9.9",
    "tqdm>=4.67.3",
]
