[project]
name = "liquid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.5",
    "importlib-resources>=6.5.2",
    "ipycanvas>=0.14.3",
    "ipywidgets>=8.1.8",
    "jax[cuda13]>=0.9.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "optax>=0.2.6",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "tensorflow-cpu>=2.21.0",
    "tensorflow-datasets>=4.9.9",
]
